feat(provisioning): manage encrypted application targets
